# Hatespeech

./: .gitignore  README.md  api.py  main.py  model.pth  pyproject.toml
data/: test.csv  train.csv  valid.csv
src/: __init__.py  lstm_model.py  parser.py  utils.py
